src/main/java/oo/solid/isp/sample/good/Telefone.java
package oo.solid.isp.sample.good;

public interface Telefone extends Telefonia {
}
