src/main/java/oo/solid/isp/sample/bad/HardPhoneDoesNotTakePictureException.java
package oo.solid.isp.sample.bad;

public class HardPhoneDoesNotTakePictureException extends RuntimeException {
}
